--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <lzm.cn.riseskillproject.view.SimpleTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:text="test-textview"
-        app:textSize="14sp"
         android:background="@color/colorPrimaryDark"
+        android:padding="10dp"
+        app:text="teyst-texgggtview"
         app:textColor="@color/colorAccent"
-        />
+        app:textSize="18sp" />
 
 </LinearLayout>
