--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <lzm.cn.riseskillproject.view.SimpleTextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/indicator_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@color/colorPrimaryDark"
-        android:padding="10dp"
-        app:text="teyst-texgggtview"
-        app:textColor="@color/colorAccent"
-        app:textSize="18sp" />
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp" />
 
-    <lzm.cn.riseskillproject.view.QQStepView
-        android:id="@+id/step_view"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center_horizontal"
-        app:outerColor="@color/colorPrimary"
-        app:innerColor="@color/colorAccent"
-        app:bordrWidth="16dp"
-        app:stepTextColor="@color/colorAccent"
-        app:stepTextSize="36sp"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
