--- a/app/src/main/res/layout/activity_simple_customview.xml
+++ b/app/src/main/res/layout/activity_simple_customview.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        layout="@layout/common_titlebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <lzm.cn.riseskillproject.view.ColorTrackTextview
         android:id="@+id/color_track_textview"
         android:layout_width="wrap_content"
