--- a/app/src/main/res/layout/common_titlebar.xml
+++ b/app/src/main/res/layout/common_titlebar.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#D2691E">
+
+    <ImageView
+        android:id="@+id/common_title_backview"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/arrow_back" />
 
     <TextView
         android:id="@+id/common_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:layout_marginLeft="25dp"
-        android:layout_gravity="center_vertical"/>
+        android:textSize="18sp" />
 
-</LinearLayout>
+</RelativeLayout>
