--- a/app/src/main/res/layout/activity_simple_customview.xml
+++ b/app/src/main/res/layout/activity_simple_customview.xml
@@ -8,7 +8,7 @@
     <include
         layout="@layout/common_titlebar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="50dp"/>
 
     <lzm.cn.riseskillproject.view.ColorTrackTextview
         android:id="@+id/color_track_textview"
